--- a/src/components/BookList.scss
+++ b/src/components/BookList.scss
@@ -1,7 +1,10 @@
 .book-list-container {
   padding: 16px;
   background-color: #f7f7f7;
-  min-height: 100vh;
+  // min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 
   .header {
     display: flex;
