--- a/src/pages/BookList/BookList.scss
+++ b/src/pages/BookList/BookList.scss
@@ -56,6 +56,10 @@
         font-size: 14px;
         color: #888;
       }
+
+      .book-looked-at {
+        font-size: 12px;
+      }
     }
   }
 
