reader-current-chapter

--- a/src/pages/Reader/Reader.scss
+++ b/src/pages/Reader/Reader.scss
@@ -79,6 +79,9 @@
 
 .reader-current-chapter {
   padding: 8px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .reader-progress-display {
